# flutter_opaque

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
integration_test/: simple_test.dart
ios/: flutter_opaque.podspec
ios/Classes/: FlutterOpaquePlugin.swift
lib/: flutter_opaque.dart  flutter_opaque_method_channel.dart  flutter_opaque_platform_interface.dart  main.dart
linux/: CMakeLists.txt  flutter_opaque_plugin.cc  flutter_opaque_plugin_private.h
linux/test/: flutter_opaque_plugin_test.cc
macos/: flutter_opaque.podspec
macos/Classes/: FlutterOpaquePlugin.swift
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  opaque.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flutter_opaque.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_opaque.podspec
rust_builder/windows/: CMakeLists.txt
test/: flutter_opaque_method_channel_test.dart  flutter_opaque_test.dart
(+15 files in other folders)
