[package]
name = "rust_lib_flutter_opaque"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
opaque-ke = { version = "4.0.1", features = ["argon2"] }
rand = { version = "0.8", features = ["getrandom"] }
sha2 = { version = "0.10", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
